# trueno-viz

./: .clippy.toml  .dockerignore  .gitignore  .pmat-metrics.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  clippy.toml  deny.toml  justfile
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  nightly.yml  pmat-quality.yml.disabled  release.yml
.pmat/: baseline.json  dead-code-cache.json  project.toml  tdg-rules.toml
.pmat-metrics/: commit-15c4dc9-meta.json  commit-2b74150-meta.json  commit-2d9203a-meta.json  commit-30b0735-meta.json  commit-7540479-meta.json  commit-7b9aa2b-meta.json  commit-8720984-meta.json  commit-a12e998-meta.json  commit-ab1456d-meta.json  commit-d3b4645-meta.json
.pmat/metrics/: dependencies.json
benches/: encoder_benchmark.rs  framebuffer_benchmark.rs  heatmap_benchmark.rs  histogram_benchmark.rs  line_benchmark.rs  scatter_benchmark.rs
book/: .gitignore  book.toml
book/src/: SUMMARY.md  introduction.md
book/src/accel/: gpu.md  simd.md  wasm.md
book/src/api/: color.md  error.md  geometry.md  scale.md
book/src/appendix/: contributing.md  references.md
book/src/getting-started/: first-plot.md  installation.md  quickstart.md
book/src/grammar/: aes.md  coord.md  data.md  facet.md  geom.md  overview.md  scales.md  stat.md  theme.md
book/src/integration/: aprender.md  trueno-db.md  trueno-graph.md
book/src/ml-viz/: confusion-matrix.md  loss.md  pr.md  roc.md
book/src/monitor/: manzana.md  ttop.md
book/src/output/: png.md  svg.md  terminal.md
book/src/plots/: boxplot.md  heatmap.md  histogram.md  line.md  scatter.md  violin.md
book/src/tdd/: coverage.md  monitor-testing.md  property-testing.md  test-driven-viz.md
book/src/widgets/: overview.md  resource-bar.md  run-table.md  sparkline.md
contracts/: loss-metrics-v1.yaml
contracts/.pv/cache/lint/: 17183b36a8ba764f.json
crates/ttop/: Cargo.toml  Makefile  README.md
crates/ttop/.cargo/: config.toml
crates/ttop/.pmat-metrics/: commit-9930611-meta.json
crates/ttop/docs/roadmaps/: roadmap.yaml
crates/ttop/examples/: apple_accelerators.rs  collectors.rs  headless.rs  presentar_demo.rs  simple.rs
crates/ttop/src/: app.rs  display_rules.rs  lib.rs  main.rs  panels.rs  ring_buffer.rs  state.rs  theme.rs  ui.rs
crates/ttop/src/analyzers/: connections.rs  containers.rs  disk_entropy.rs  disk_io.rs  file_analyzer.rs  geoip.rs  gpu_procs.rs  mod.rs  network_stats.rs  process_extra.rs  psi.rs  sensor_health.rs  storage.rs  swap.rs  treemap.rs
crates/ttop/src/app/: mod.rs  tests.rs
crates/ttop/src/panels/: connections.rs  cpu_memory.rs  disk_network.rs  files.rs  files_tests.rs  files_tests_b.rs  files_tests_extended.rs  gpu_sensors.rs  mod.rs  process_views.rs  system_process.rs
crates/ttop/tests/: falsification_tests.rs  monitor_unit_tests.rs  panel_evidence_test.rs  panels_test.rs  panels_test_extended.rs  playbook_test.rs  probar_full_test.rs  proptest_macos.rs  renacer_hang_tests.rs
docker/: ttop-test.Dockerfile
docs/: CODE_REVIEW.md  CONTRIBUTING-SIMD.md  QUALITY.md
docs/roadmaps/: roadmap.yaml
docs/specifications/: full-SIMD-collectors-queue.md  real-time-gpu-demo-spec.md  trueno-viz-spec.md  ttop-demo.md  ttop-improve.md  tui-monitoring-spec.md
examples/: aprender_integration.rs  box_violin.rs  btop.rs  confusion_matrix_ml.rs  dashboard_widgets.rs  force_graph.rs  grammar_of_graphics.rs  heatmap_correlation.rs  loss_training.rs  readme_demo.rs  roc_pr_curves.rs  scatter_basic.rs  simd_kernels.rs  svg_output.rs  terminal_output.rs  test_macos_collectors.rs  text_prompt.rs  trueno_graph_integration.rs
pkg/: README.md  package.json.template
scripts/: check-coverage.sh  generate-readme.sh
src/: color.rs  error.rs  framebuffer.rs  geometry.rs  lib.rs  scale.rs  verification_specs.rs  wasm.rs
src/accel/: mod.rs
src/grammar/: aes.rs  coord.rs  data.rs  facet.rs  geom.rs  ggplot.rs  mod.rs  stat.rs  theme.rs
src/interop/: aprender.rs  entrenar.rs  mod.rs  trueno_graph.rs
src/monitor/: app.rs  config.rs  debug.rs  error.rs  input.rs  kernels.rs  layout.rs  mod.rs  presets.rs  remote.rs  ring_buffer.rs  state.rs  subprocess.rs  theme.rs  types.rs
src/monitor/collectors/: apple_accelerators.rs  battery.rs  battery_sensors_simd.rs  cpu.rs  cpu_simd.rs  disk.rs  disk_simd.rs  gpu_amd.rs  gpu_apple.rs  gpu_nvidia.rs  gpu_simd.rs  memory.rs  memory_simd.rs  mod.rs  network.rs  network_simd.rs  process.rs  process_simd.rs  sensors.rs  stack.rs
src/monitor/ffi/: afterburner.rs  iokit.rs  mod.rs  wgpu.rs
src/monitor/panels/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs
src/monitor/simd/: compressed.rs  correlation.rs  integration_tests.rs  kernels.rs  mod.rs  ring_buffer.rs  soa.rs  timeseries.rs
src/monitor/widgets/: boxplot.rs  confusion.rs  dataframe.rs  gauge.rs  graph.rs  heatmap.rs  histogram.rs  horizon.rs  meter.rs  mod.rs  sparkline.rs  table.rs  tree.rs  violin.rs
src/output/: html.rs  mod.rs  png_encoder.rs  svg.rs  terminal.rs
src/plots/: boxplot.rs  confusion_matrix.rs  force_graph.rs  heatmap.rs  histogram.rs  line.rs  loss_curve.rs  mod.rs  roc_pr.rs  scatter.rs
src/prompt/: mod.rs
src/render/: mod.rs  primitives.rs
src/widgets/: mod.rs
src/widgets/experiment/: mod.rs  resource_bar.rs  run_table.rs  sparkline.rs
tests/: collectors_macos_test.rs  pixel_verification_test.rs  popperian_falsification_test.rs  wgpu_multi_gpu_test.rs
tests/playbooks/: macos_collectors.yaml
wasm-pkg/: Cargo.toml  index.html  package-lock.json  package.json  playwright.config.ts
wasm-pkg/e2e/: demo.spec.ts
wasm-pkg/playwright-report/: index.html
wasm-pkg/src/: lib.rs
