[package]
name = "trueno-viz"
version = "0.1.7"
edition = "2021"
rust-version = "1.75"
authors = ["PAIML Team"]
description = "SIMD/GPU/WASM-accelerated visualization library for data science and ML"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paiml/trueno-viz"
documentation = "https://docs.rs/trueno-viz"
readme = "README.md"
keywords = ["visualization", "simd", "gpu", "wasm", "data-science"]
categories = ["visualization", "graphics", "science", "wasm"]

[dependencies]
# Core SIMD/GPU acceleration
trueno = { version = "0.10.1", default-features = false }

# PNG encoding (pure Rust, no libpng)
png = "0.17"

# Base64 encoding for SVG embedded images
base64 = "0.22"

# Error handling
thiserror = "2.0"

# Optional: ML integration
aprender = { version = "0.14", optional = true }

# Optional: Graph integration
trueno-graph = { version = "0.1.5", optional = true }

# Optional: Database integration
trueno-db = { version = "0.3.8", optional = true }

# Optional: Training integration and inference monitoring
entrenar = { version = "0.2.7", optional = true }

# Optional: Serialization (for ML inference monitoring visualization)
serde = { version = "1.0", optional = true }

# Optional: WASM support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }

[dev-dependencies]
# Testing
proptest = "1.4"
criterion = { version = "0.6", features = ["html_reports"] }

# Test utilities
tempfile = "3.10"
approx = "0.5"

[features]
default = []

# SIMD acceleration is built-in to trueno by default
# No feature flag needed

# GPU compute acceleration (native)
gpu = ["trueno/gpu"]

# GPU compute acceleration (WebGPU/WASM)
gpu-wasm = ["trueno/gpu-wasm", "wasm"]

# Parallel processing with rayon
parallel = ["trueno/parallel"]

# ML library integration
ml = ["dep:aprender", "dep:entrenar", "dep:serde"]

# Graph library integration
graph = ["dep:trueno-graph"]

# Database integration
db = ["dep:trueno-db"]

# Terminal output support
terminal = []

# SVG output support
svg = []

# WASM/WebAssembly support
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys"]

# All features enabled (excluding wasm which needs special build)
full = ["gpu", "parallel", "ml", "graph", "db", "terminal", "svg"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1

[profile.bench]
opt-level = 3
lto = "thin"

[[bench]]
name = "scatter_benchmark"
harness = false

[[bench]]
name = "framebuffer_benchmark"
harness = false

[[bench]]
name = "histogram_benchmark"
harness = false

[[bench]]
name = "heatmap_benchmark"
harness = false

[[bench]]
name = "line_benchmark"
harness = false

[[bench]]
name = "encoder_benchmark"
harness = false

[[example]]
name = "aprender_integration"
required-features = ["ml"]

[[example]]
name = "trueno_graph_integration"
required-features = ["graph"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
# Base warning level
all = { level = "warn", priority = -1 }

# Ban unwrap() in production code (Cloudflare incident 2025-11-18)
# Tests use #![cfg_attr(test, allow(clippy::unwrap_used))] in lib.rs
unwrap_used = "deny"
# expect() with meaningful messages is acceptable
expect_used = "allow"
assertions_on_constants = "allow"  # Allow assert!(true) in compile-test

# Allow common patterns in graphics/visualization code
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
many_single_char_names = "allow"  # h, s, l, r, g, b are standard color notation
suboptimal_flops = "allow"        # Clarity over micro-optimization initially
lint_groups_priority = "allow"    # Cargo.toml lint config warning
