[workspace]

[package]
name = "ttop"
version = "0.2.1"
edition = "2021"
rust-version = "1.75"
authors = ["PAIML Team"]
description = "Terminal Top: 10X better than btop - Pure Rust system monitor with GPU support (NVIDIA/AMD/Apple), macOS native, deterministic rendering"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paiml/trueno-viz"
homepage = "https://github.com/paiml/trueno-viz/tree/main/crates/ttop"
documentation = "https://docs.rs/ttop"
readme = "README.md"
keywords = ["system-monitor", "tui", "terminal", "btop", "htop"]
categories = ["command-line-utilities", "visualization"]
exclude = ["tests/", "target/"]

[[bin]]
name = "ttop"
path = "src/main.rs"

[dependencies]
# Core monitoring library (re-exports ratatui for trait compatibility)
trueno-viz = { version = "0.1.11", path = "../..", features = ["monitor"] }

# TUI framework - use crossterm directly, ratatui comes from trueno-viz
crossterm = "0.28"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Tracing (optional renacer integration)
renacer = { version = "0.9", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
# Testing
proptest = "1.4"
tempfile = "3.10"

# TUI testing (probar) - 100% pixel coverage
jugar-probar = { version = "0.4", default-features = false, features = ["tui"] }
ratatui = "0.29"

[features]
default = ["nvidia"]
nvidia = ["trueno-viz/monitor-nvidia"]
amd = []  # AMD GPU uses dynamic loading, always available on Linux
apple-hardware = ["trueno-viz/apple-hardware"]  # Neural Engine, Afterburner, Metal, SE
tracing = ["dep:renacer"]
full = ["nvidia", "tracing", "apple-hardware"]

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "allow"
